# rust-app-axum-surrealdb

./: .env.exp  Cargo.toml
api-backend/: Cargo.toml
api-backend/src/: lib.rs
api-backend/src/site/: about.rs  mod.rs  root.rs
api-backend/src/student/: mod.rs
app-backend/: Cargo.toml
app-backend/src/: main.rs
core-backend/: Cargo.toml
core-backend/src/: config.rs  lib.rs
domain-backend/: Cargo.toml
domain-backend/src/: lib.rs
domain-backend/src/student/: mod.rs
inftra-backend/: Cargo.toml
inftra-backend/src/: error.rs  lib.rs
inftra-backend/src/middleware/: auth.rs  map_response.rs  mod.rs
inftra-backend/src/site/: about.rs  error.rs  mod.rs  root.rs
inftra-backend/src/student/: error.rs  mod.rs
