[package]
name = "api-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = [ "macros" ] }
surrealdb = "1.5.4"
tokio = { version = "1.38.1", features = [ "full" ] }


# Members 
inftra-backend = { path = "../inftra-backend" }
domain-backend = { path = "../domain-backend" }
