[package]
name = "app-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = [ "macros" ] }

dotenv = "0.15.0"
env_logger = "0.11.3"

surrealdb = "1.5.4"

tokio = { version = "1.38.1", features = [ "full" ] }

# Members
core-backend = { path = "../core-backend" }
api-backend = { path = "../api-backend" }
inftra-backend = { path = "../inftra-backend" }
